--- a/CapAngular/src/app/componenti/error-page/error-page.component.html
+++ b/CapAngular/src/app/componenti/error-page/error-page.component.html
@@ -1,4 +1,4 @@
-<div class="text-center p-5">
+<div class="container text-center p-5">
 <h2 class="fw-semibold">Error 404</h2>
 <p class="fs-3 fw-semibold mb-4"> Pagina non trovata</p>
 
