--- a/CapAngular/src/app/componenti/domande/domande.component.html
+++ b/CapAngular/src/app/componenti/domande/domande.component.html
@@ -9,25 +9,11 @@
       <!-- Display answer choices -->
       <div class="answer-options">
         <div *ngFor="let answer of questions[currentQuestionIndex].answers; let i = index">
-          <label>
-            <input
-              type="radio"
-              name="answerOption"
-              [value]="i"
-              [(ngModel)]="selectedAnswerIndex"
-              (change)="selectedQuestion(i)"
-            />
+          <label class="m-2 fw-semibold">
+            <input type="radio" name="answerOption" [value]="i" [(ngModel)]="selectedAnswerIndex"
+              (change)="selectedQuestion(i)" />
             {{ answer.text }}
           </label>
-          <p>Maledizione la risposta è:</p>
-          <p>
-            Maledizione la risposta è:
-            <span [ngClass]="{'correct-answer': answer.isCorrect, 'incorrect-answer': !answer.isCorrect}">
-              {{ answer.isCorrect ? 'Correct' : 'Incorrect' }}
-            </span>
-          </p>
-
-          <p>{{ answer.id }}</p>
         </div>
 
 
