--- a/CapAngular/src/app/componenti/domande/domande.component.html
+++ b/CapAngular/src/app/componenti/domande/domande.component.html
@@ -1,28 +1,20 @@
 <div class="father mt-5">
-  <div class="container mt-5">
-    <div class="question-container mt-5">
-      <!-- Display the current question text -->
-      <h2 class="mt-5">Question {{ currentQuestionIndex + 1 }}</h2>
-      <p>{{ questions[currentQuestionIndex].text }}</p>
-      <p>Selected Answer Index: {{ selectedAnswerIndex }}</p>
-
-      <!-- Display answer choices -->
-      <div class="answer-options">
-        <div *ngFor="let answer of questions[currentQuestionIndex].answers; let i = index">
-          <label class="m-2 fw-semibold">
-            <input type="radio" name="answerOption" [value]="i" [(ngModel)]="selectedAnswerIndex"
-              (change)="selectedQuestion(i)" />
-            {{ answer.text }}
-          </label>
-        </div>
-
-
+  <div class="card text-center shadow-lg mb-5 bg-info bg-opacity-75 rounded" style="width: 18rem;">
+    <div class="card-body mb-2">
+      <h5 class="card-title mb-3">Question {{ currentQuestionIndex + 1 }}</h5>
+      <div class="p-3 border-danger border-top mb-0">
+        <p class="mb-0">{{ questions[currentQuestionIndex].text }}</p>
       </div>
-
-      <div class="navigation-buttons">
-        <button (click)="nextQuestion()">
-          Next
-        </button>
+      <div class="answer-options border-top border-danger pt-3">
+        <div *ngFor="let answer of questions[currentQuestionIndex].answers; let i = index">
+          <div class="btn-group" data-toggle="buttons">
+            <label class="btn-purple btn-outline-purple rounded-pill py-2 px-3 m-2 fw-semibold" [class.active]="selectedAnswerIndex === i">
+              <input class="text-danger" type="radio" name="answerOption" style="display: none" [value]="i" [(ngModel)]="selectedAnswerIndex"
+                (change)="selectedQuestion(i)" />
+              {{ answer.text }}
+            </label>
+          </div>
+        </div>
       </div>
     </div>
   </div>
