--- a/CapAngular/src/app/componenti/domande/domande.component.scss
+++ b/CapAngular/src/app/componenti/domande/domande.component.scss
@@ -5,25 +5,23 @@ html {
 .father {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(
-    125deg,
-    #32ffe0 15%,
-    #1d44dd 25%,
-    #2951f4 35%,
-    #1caacd 40%,
-     #42e6cd 45%,
-    #274bdd 50%,
-    #50d7c3 59%,
-    #1d44dd 70%,
-    #1caacd 76%,
-    #1d44dd 83%,
-    #031C91 90%,
-    #020e44 100%,
-  );
+  background-image: url('../../../assets/img/pexels-emiliano-arano-1350197.jpg');
+  background-size:cover;
 }
-.container {
+.card {
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.btn-purple {
+  background-color: rgb(172, 95, 172);
+  border: #020e44;
+  transition: all 0.3s;
+
+  &:hover{
+    cursor: pointer;
+    transform: scale(1.1); /* Scale the button by 10% on hover */
+}
 }
