--- a/CapAngular/src/app/componenti/home/home.component.scss
+++ b/CapAngular/src/app/componenti/home/home.component.scss
@@ -12,21 +12,10 @@ html {
 .father {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(
-    125deg,
-    #32ffe0 15%,
-    #1d44dd 25%,
-    #2951f4 35%,
-    #1caacd 40%,
-     #42e6cd 45%,
-    #274bdd 50%,
-    #50d7c3 59%,
-    #1d44dd 70%,
-    #1caacd 76%,
-    #1d44dd 83%,
-    #031C91 90%,
-    #020e44 100%,
-  );
+  background-image: url('../../../assets/img/pexels-jeremy-bishop-2397651.jpg');
+  background-size:cover;
+  opacity: 0.7;
+}
 
   .img1{
     position: absolute;
@@ -39,6 +28,5 @@ html {
   transform: translate(-50%, -50%);
   height: 100%;
   }
-}
 
 
