--- a/CapAngular/src/app/componenti/level/level.component.scss
+++ b/CapAngular/src/app/componenti/level/level.component.scss
@@ -5,25 +5,44 @@ html {
 .father {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(
-    125deg,
-    #32ffe0 15%,
-    #1d44dd 25%,
-    #2951f4 35%,
-    #1caacd 40%,
-     #42e6cd 45%,
-    #274bdd 50%,
-    #50d7c3 59%,
-    #1d44dd 70%,
-    #1caacd 76%,
-    #1d44dd 83%,
-    #031C91 90%,
-    #020e44 100%,
-  );
+  background-image: url('../../../assets/img/pexels-pixabay-62307.jpg');
+  background-size:cover;
 }
-.container {
+.card {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+input[type="radio"] {
+  cursor: pointer;
+  /* per cancellare stile di sistema checkbox */
+  appearance: none;
+  background-color: #ffffff;
+  border: 2px solid #0032fc;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+}
+
+/* Stile del segno di spunta */
+input[type="radio"]::before {
+  content: "\2714";
+  display: block;
+  color: #fff;
+  text-align: center;
+  font-size: 8px;
+  visibility: hidden;
+}
+
+
+/* Stile del segno di spunta quando la checkbox è selezionata */
+input[type="radio"]:checked::before {
+  visibility: visible;
+}
+
+
+.centro {
+  margin-left: 93px;
 }
