--- a/CapAngular/src/app/componenti/registrazione/registrazione.component.scss
+++ b/CapAngular/src/app/componenti/registrazione/registrazione.component.scss
@@ -7,16 +7,10 @@ html {
   height: 100vh;
   background: linear-gradient(
     125deg,
-    #32ffe0 15%,
-    #1d44dd 25%,
+    #32ffe0 7%,
     #2951f4 35%,
-    #1caacd 40%,
-     #42e6cd 45%,
-    #274bdd 50%,
-    #50d7c3 59%,
-    #1d44dd 70%,
-    #1caacd 76%,
-    #1d44dd 83%,
+    #1caacd 59%,
+    #1531a2 87%,
     #031C91 90%,
     #020e44 100%,
   );
