--- a/CapAngular/src/app/componenti/dettagliutente/dettagliutente.component.scss
+++ b/CapAngular/src/app/componenti/dettagliutente/dettagliutente.component.scss
@@ -2,3 +2,8 @@
   border: 2px dotted red;
   box-shadow: 1px 1px 16px black;
 }
+
+.decoration2{
+  border: 2px dotted rgb(17, 0, 255);
+  box-shadow: 1px 1px 16px black;
+}
