--- a/CapAngular/src/app/componenti/navbar/navbar/navbar.component.html
+++ b/CapAngular/src/app/componenti/navbar/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-dark border-bottom">
   <div class="container-fluid">
-      <img src="../../../../assets/img/transparent-shark-bruce-disney-emoji-blitz-wiki-fandom-powered-by-wi5e72c354b42ba4.824431541584579412738.png">
-      <a class="navbar-brand fw-semibold text-danger" [routerLink]="['/']" routerLinkActive="active">SharkTest</a>
+      <img src="../../../../assets/img/transparent-shark-bruce-disney-emoji-blitz-wiki-fandom-powered-by-wi5e72c354b42ba4.824431541584579412738.png" class="d-none d-sm-block">
+      <a class="navbar-brand fw-semibold text-danger d-none d-sm-block" [routerLink]="['/']" routerLinkActive="active">SharkTest</a>
       <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" [routerLink]="['/profilo/dettagli/', user.id]">Informazioni</a></li>
-                  <li><a class="dropdown-item" [routerLink]="['profilo/filmpref']">Test</a></li>
+                  <li><a class="dropdown-item" [routerLink]="['profilo/filmpref']">Risultati</a></li>
                 </ul>
               </div>
 
