--- a/CapAngular/src/app/componenti/risultati/risultati.component.scss
+++ b/CapAngular/src/app/componenti/risultati/risultati.component.scss
@@ -21,9 +21,35 @@ html {
     #020e44 100%,
   );
 }
-.container {
+
+.card{
+  width: 70%;
+  border: 2px solid black;
+  box-shadow: 1px 1px 16px black;
+  background-color: #c3b57c;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+hr {
+  border: 1px solid #000000;
+}
+
+.grade{
+  width: 75%;
+  max-width: 80px;
+}
+
+.logo{
+  width: 90%;
+  opacity: 0.1;
+  max-width: 386px;
+  margin: 0;
+}
+
+.firma{
+  width: 30%;
+  transform: rotate(-16deg);
 }
