--- a/CapAngular/src/app/componenti/home/home.component.html
+++ b/CapAngular/src/app/componenti/home/home.component.html
@@ -5,12 +5,12 @@
 <div class="container">
     <div class="mt-5 text-center p-5">
       <h1 class="fw-bold text-DARK">Welcome to <span class="text-danger fw-bold">SharkTest</span></h1>
-      <h2 class="text-dark fw-semibold">test your knowledge about Sharks</h2>
-      <p class="text-dark fw-semibold">Registrati per cominciare o accedi!</p>
+      <h2 class="text-dark fw-semibold">Test your knowledge about Sharks</h2>
+      <p class="text-dark fw-semibold">Subscribe to get started or log-in!</p>
     </div>
     <div class="text-center mb-5">
-      <a [routerLink]="['auth/login']" routerLinkActive="active" class="btn btn-danger rounded-pill me-4 text-dark">Accedi</a>
-      <a [routerLink]="['auth/register']" routerLinkActive="active" class="btn btn-danger rounded-pill text-dark">Registrati</a>
+      <a [routerLink]="['auth/login']" routerLinkActive="active" class="btn btn-danger rounded-pill me-4 text-dark">Log-In</a>
+      <a [routerLink]="['auth/register']" routerLinkActive="active" class="btn btn-danger rounded-pill text-dark">Subscribe</a>
     </div>
   </div>
 </div>
