--- a/CapAngular/src/app/componenti/dettagliutente/dettagliutente.component.html
+++ b/CapAngular/src/app/componenti/dettagliutente/dettagliutente.component.html
@@ -1,19 +1,16 @@
-<p class="fs-4 text-white mb-5">Informazione utente</p>
-<div class=" m-auto position-relative image-container d-block d-lg-inline-block me-5">
-</div>
-<div class="dropdown position-absolute matita">
-  <button class="btn btn-primary rounded-circle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    <i class="bi bi-pencil-fill p-0"></i>
-  </button>
-</div>
-<div class="decoration w-50 p-3 d-inline-block m-auto">
-  <p class="text-white fs-4">Nome: {{user.username}}</p>
-  <p class="text-white fs-4">Email: {{user.email}}</p>
-  <p class="fs-4 text-white mb-3">Risultati Salvati:</p>
-</div>
-<div class="decoration2 w-50 p-3 d-inline-block m-auto">
-  <div *ngFor="let risultato of user.risultati" >
-    <p class="text-white fs-4">Livello: {{ risultato.level }}</p>
-    <p class="text-white fs-4">Punteggio: {{ risultato.score }}</p>
+<div class="m-auto w-100">
+  <div class="card text-center w-75 m-auto">
+    <p class="fs-4 text-white mb-5">Informazione utente</p>
+    <div class=" m-auto position-relative image-container d-block d-lg-inline-block me-5">
+    </div>
+    <div class="dropdown position-absolute matita">
+      <button class="btn btn-primary rounded-circle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-pencil-fill p-0"></i>
+      </button>
+    </div>
+    <div class="decoration w-50 p-3 d-inline-block m-auto">
+      <p class="text-white fs-4">Nome: {{user.username}}</p>
+      <p class="text-white fs-4">Email: {{user.email}}</p>
+    </div>
   </div>
 </div>
