--- a/CapAngular/src/app/componenti/domande/domande.component.html
+++ b/CapAngular/src/app/componenti/domande/domande.component.html
@@ -1,5 +1,5 @@
 <div class="father mt-5">
-  <div class="card text-center shadow-lg mb-5 bg-info bg-opacity-75 rounded" style="width: 18rem;">
+  <div class="card text-center bg-info rounded" style="width: 18rem;">
     <div class="card-body mb-2">
       <h5 class="card-title mb-3">Question {{ currentQuestionIndex + 1 }}</h5>
       <div class="p-3 border-danger border-top mb-0">
