--- a/CapAngular/src/app/componenti/domande/domande.component.scss
+++ b/CapAngular/src/app/componenti/domande/domande.component.scss
@@ -5,14 +5,22 @@ html {
 .father {
   width: 100%;
   height: 100vh;
-  background-image: url('../../../assets/img/pexels-emiliano-arano-1350197.jpg');
-  background-size:cover;
+  background-repeat: no-repeat;
+  background: linear-gradient(
+    180deg,
+    #32ffe0 7%,
+    #2951f4 35%,
+    #020e44 100%
+  );
 }
+
 .card {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border: 1px solid black;
+  box-shadow: 1px 1px 16px black;
 }
 
 .btn-purple {
