--- a/CapAngular/src/app/componenti/profile/profile.component.scss
+++ b/CapAngular/src/app/componenti/profile/profile.component.scss
@@ -1,3 +1,19 @@
 a:focus{
   background:green;
 }
+
+.active {
+  background: green;
+}
+
+
+.father {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+    125deg,
+    #32ffe0 7%,
+    #2951f4 35%,
+    #020e44 100%
+    );
+}
