--- a/CapAngular/src/app/componenti/domande/domande.component.scss
+++ b/CapAngular/src/app/componenti/domande/domande.component.scss
@@ -15,6 +15,8 @@ html {
 }
 
 .card {
+  width: 40%;
+  min-width: 260px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -32,4 +34,57 @@ html {
     cursor: pointer;
     transform: scale(1.1); /* Scale the button by 10% on hover */
 }
+}
+
+.timer{
+  position:absolute;
+  top:70px;
+  right: 60px;
+}
+
+.countdown-circle {
+  margin: 0 auto;
+  display: block;
+}
+
+.circle-bg {
+  fill: none;
+  stroke: #2aad40;
+  stroke-width: 10;
+}
+
+.circle-progress {
+  fill: none;
+  stroke:  #ea3333;
+  stroke-width: 8;
+  stroke-dasharray: 402; /* Circonferenza (2 * π * r) */
+  stroke-dashoffset: 402; /* valore iniziale del cerchio completo */
+  transition: stroke-dashoffset 1s ease-out;
+  filter: drop-shadow(1px 1px 1px #ea3333) drop-shadow(-1px -1px 1px #ea3333);
+  transform-origin: 70px 70px;
+  transform: rotate(-90deg);
+}
+
+.circle-shadow {
+  fill: none;
+  stroke: black;
+  stroke-opacity: 100%;
+  stroke-width: 10;
+  filter: blur(2px);
+  }
+
+
+.circle-text {
+  font-size: 1rem; /* Font size for text elements */
+  fill: #333; /* Text color */
+}
+
+.correct-answer {
+  background-color: green !important;
+  color: white !important;
+}
+
+.wrong-answer{
+  background-color: rgb(255, 15, 15) !important;
+  color: white !important;
 }
