--- a/CapAngular/src/app/componenti/grades/grades.component.html
+++ b/CapAngular/src/app/componenti/grades/grades.component.html
@@ -5,15 +5,14 @@
         <div class="card-body d-flex flex-column flex-md-row  justify-content-around border-bottom border-danger">
           <div class="testo d-flex align-items-center justify-content-center flex-column">
             <h5 class="card-title fw-bold">Grades</h5>
-            <hr class="w-75">
+            <hr class="w-50">
             <p class="card-text fw-semibold">Level: <span class="fw-medium">{{ risultato.level }}</span></p>
-            <hr class="w-75 ">
+            <hr class="w-50 ">
             <p class="card-text fw-semibold">Score: <span class="fw-medium">{{ risultato.score }}</span></p>
-            <hr class="w-75">
+            <hr class="w-50">
             <p class="card-text fw-semibold">Date: <span class="fw-medium">{{ risultato.timestamp | date: 'yyyy-MM-dd'
                 }}</span></p>
-            <hr class="w-75">
-            <button (click)="cancRisultato(risultato.id)">Delete</button>
+            <hr class="w-50">
           </div>
           <div>
             <div class="d-flex align-items-center justify-content-center w-100 h-100" *ngIf="risultato.score < 50">
@@ -30,6 +29,13 @@
                 src="../../../assets/img/kisspng-shark-vector-graphics-businessperson-cartoon-5d311521039862.4541292215634977610147.png"
                 class="logo">
             </div>
+          </div>
+          <div class="d-flex flex-column align-items-center justify-content-center w-25">
+            <button (click)="cancRisultato(risultato.id)" class="bottone d-inline"><img
+                src="../../../assets/img/transparent-dust-bin-garbage-box-trash-can-60cfd2745ae6b5.7143470516242325643723.png"
+                class="delete"></button>
+                <div class="delete-message text-center fw-bold"  *ngIf="selectedId === risultato.id && risultato.score < 75"><p class="fw-bold">Deleting your bad score? Clever move!</p></div>
+                <div class="delete-message text-center fw-bold"  *ngIf="selectedId === risultato.id && risultato.score >= 75"><p class="fw-bold">Deleting your good score? Why?!</p></div>
           </div>
         </div>
       </div>
