--- a/CapAngular/src/app/componenti/home/home.component.html
+++ b/CapAngular/src/app/componenti/home/home.component.html
@@ -9,8 +9,8 @@
       <p class="text-dark fw-semibold">Subscribe to get started or log-in!</p>
     </div>
     <div class="text-center mb-5">
-      <a [routerLink]="['auth/login']" routerLinkActive="active" class="btn btn-danger rounded-pill me-4 text-dark">Log-In</a>
-      <a [routerLink]="['auth/register']" routerLinkActive="active" class="btn btn-danger rounded-pill text-dark">Subscribe</a>
+      <a [routerLink]="['auth/login']" routerLinkActive="active" class=" text-white btn-danger rounded-pill me-4">Log-In</a>
+      <a [routerLink]="['auth/register']" routerLinkActive="active" class=" text-whitebtn btn-danger rounded-pill">Subscribe</a>
     </div>
   </div>
 </div>
