Grafica e inizio foto profilo

--- a/CapAngular/src/app/componenti/domande/domande.component.html
+++ b/CapAngular/src/app/componenti/domande/domande.component.html
@@ -1,6 +1,21 @@
 <ng-container *ngIf="textLoaded; then domande; else loading"></ng-container>
 <ng-template #domande>
   <div class="father mt-5">
+    <div class="bubble bubble7"></div>
+      <div class="bubble bubble1"></div>
+      <div class="bubble bubble2"></div>
+      <div class="bubble bubble3"></div>
+      <div class="bubble bubble4"></div>
+      <div class="bubble bubble5"></div>
+      <div class="bubble bubble6"></div>
+      <div class="bubble bubble8"></div>
+      <div class="bubble bubble9"></div>
+      <div class="bubble bubble10"></div>
+      <div class="bubble bubble11"></div>
+      <div class="bubble bubble12"></div>
+      <div class="bubble bubble13"></div>
+      <div class="bubble bubble14"></div>
+      <div class="bubble bubble15"></div>
     <div class="timer text-center">
       <svg class="countdown-circle" width="145" height="145" viewBox="0 0 145 145">
         <circle class="circle-shadow d-none d-sm-block" cx="70" cy="70" r="64"></circle>
@@ -15,6 +30,7 @@
       </svg>
     </div>
 
+    <img src="../../../assets/animation/Animation -2.gif" class="shark d-none d-sm-block" alt="Your GIF">
 
     <div class="card text-center bg-info rounded">
       <div class="card-body mb-2">
