--- a/CapAngular/src/app/componenti/level/level.component.scss
+++ b/CapAngular/src/app/componenti/level/level.component.scss
@@ -5,7 +5,7 @@ html {
 .father {
   width: 100%;
   height: 100vh;
-  background-image: url('../../../assets/img/pexels-pixabay-62307.jpg');
+  background-image: url('../../../assets/img/pexels-pixabay-62307.webp');
   background-size:cover;
 }
 .card {
