--- a/CapAngular/src/app/componenti/grades/grades.component.scss
+++ b/CapAngular/src/app/componenti/grades/grades.component.scss
@@ -18,6 +18,13 @@ hr {
   margin: 0;
 }
 
+.logo1{
+  width: 30%;
+  min-width: 86px;
+  max-width: 270px;
+  margin: 0;
+}
+
 .delete{
   width: 20%;
   min-width: 20px;
