--- a/CapAngular/src/app/componenti/grades/grades.component.html
+++ b/CapAngular/src/app/componenti/grades/grades.component.html
@@ -1,55 +1,61 @@
 <div class="m-auto w-100">
   <div class="card text-center w-75 m-auto position-relative z-3">
     <div class="h-100">
-      <div *ngIf="user.risultati.length == 0" class="h-100">
-        <div class="card-body h-100">
-          <div class="d-flex align-items-center justify-content-center flex-column h-100">
-            <h5 class="card-title fw-bold">Grades</h5>
-            <p class="fw-bold">There are no results for now, take a test to see your grades!</p>
-            <a [routerLink]="['/test']" routerLinkActive="active"
-              class=" text-white btn btn-danger rounded-pill">Test!</a>
+      <div  *ngIf="user">
+        <div *ngIf="user.risultati.length == 0" class="h-100">
+          <div class="card-body h-100">
+            <div class="d-flex align-items-center justify-content-center flex-column h-100">
+              <h5 class="card-title fw-bold">Grades</h5>
+              <p class="fw-bold">There are no results for now, take a test to see your grades!</p>
+              <img
+                  src="../../../assets/img/kisspng-shark-sticker-telegram-clip-art-dolphin-telegram-sticker-4-from-collection-5b7bfe0c3b00d4.0634420815348526202417(1).png"
+                  class="logo1">
+              <a [routerLink]="['/test']" routerLinkActive="active"
+                class=" text-white btn btn-danger rounded-pill">Test!</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div *ngFor="let risultato of user.risultati">
-        <div class="card-body d-flex flex-column flex-md-row  justify-content-around border-bottom border-danger">
-          <div class="d-flex align-items-center justify-content-center flex-column">
-            <h5 class="card-title fw-bold">Grades</h5>
-            <hr class="w-50">
-            <p class="card-text fw-semibold">Level: <span class="fw-medium">{{ risultato.level }}</span></p>
-            <hr class="w-50 ">
-            <p class="card-text fw-semibold">Score: <span class="fw-medium">{{ risultato.score }}</span></p>
-            <hr class="w-50">
-            <p class="card-text fw-semibold">Date: <span class="fw-medium">{{ risultato.timestamp | date: 'yyyy-MM-dd'
-                }}</span></p>
-            <hr class="w-50">
-          </div>
-          <div>
-            <div class="d-flex align-items-center justify-content-center w-100 h-100" *ngIf="risultato.score < 50">
-              <img
-                src="../../../assets/img/kisspng-sticker-telegram-emoji-brand-adhesive-telegram-sticker-packs-sticker-search-5bfa12753e11e5.8519595615431153812543.png"
-                class="logo">
+        <div *ngFor="let risultato of user.risultati">
+          <div class="card-body d-flex flex-column flex-md-row  justify-content-around border-bottom border-danger">
+            <div class="d-flex align-items-center justify-content-center flex-column">
+              <h5 class="card-title fw-bold">Grades</h5>
+              <hr class="w-50">
+              <p class="card-text fw-semibold">Level: <span class="fw-medium">{{ risultato.level }}</span></p>
+              <hr class="w-50 ">
+              <p class="card-text fw-semibold">Score: <span class="fw-medium">{{ risultato.score }}</span></p>
+              <hr class="w-50">
+              <p class="card-text fw-semibold">Date: <span class="fw-medium">{{ risultato.timestamp | date: 'yyyy-MM-dd'
+                  }}</span></p>
+              <hr class="w-50">
             </div>
-            <div class="d-flex align-items-center justify-content-center w-100 h-100"
-              *ngIf="risultato.score >= 50 && risultato.score < 75">
-              <img src="../../../assets/img/transparent-shark-5e69978f9eab13.2748072015839783836499.png" class="logo">
+            <div>
+              <div class="d-flex align-items-center justify-content-center w-100 h-100" *ngIf="risultato.score < 50">
+                <img
+                  src="../../../assets/img/kisspng-sticker-telegram-emoji-brand-adhesive-telegram-sticker-packs-sticker-search-5bfa12753e11e5.8519595615431153812543.png"
+                  class="logo">
+              </div>
+              <div class="d-flex align-items-center justify-content-center w-100 h-100"
+                *ngIf="risultato.score >= 50 && risultato.score < 75">
+                <img src="../../../assets/img/transparent-shark-5e69978f9eab13.2748072015839783836499.png" class="logo">
+              </div>
+              <div class="d-flex align-items-center justify-content-center w-100 h-100" *ngIf="risultato.score >= 75">
+                <img
+                  src="../../../assets/img/kisspng-shark-vector-graphics-businessperson-cartoon-5d311521039862.4541292215634977610147.png"
+                  class="logo">
+              </div>
             </div>
-            <div class="d-flex align-items-center justify-content-center w-100 h-100" *ngIf="risultato.score >= 75">
-              <img
-                src="../../../assets/img/kisspng-shark-vector-graphics-businessperson-cartoon-5d311521039862.4541292215634977610147.png"
-                class="logo">
-            </div>
-          </div>
-          <div class="d-flex flex-column align-items-center justify-content-center w-25">
-            <button (click)="cancRisultato(risultato.id)" class="bottone d-inline"><img
-                src="../../../assets/img/transparent-dust-bin-garbage-box-trash-can-60cfd2745ae6b5.7143470516242325643723.png"
-                class="delete"></button>
-            <div class="delete-message text-center fw-bold" *ngIf="selectedId === risultato.id && risultato.score < 75">
-              <p class="fw-bold">Deleting your bad score? Clever move!</p>
-            </div>
-            <div class="delete-message text-center fw-bold"
-              *ngIf="selectedId === risultato.id && risultato.score >= 75">
-              <p class="fw-bold">Deleting your good score? Why?!</p>
+            <div class="d-flex flex-column align-items-center justify-content-center w-25">
+              <button (click)="cancRisultato(risultato.id)" class="bottone d-inline"><img
+                  src="../../../assets/img/transparent-dust-bin-garbage-box-trash-can-60cfd2745ae6b5.7143470516242325643723.png"
+                  class="delete"></button>
+              <div class="delete-message text-center fw-bold"
+                *ngIf="selectedId === risultato.id && risultato.score < 75">
+                <p class="fw-bold">Deleting your bad score? Clever move!</p>
+              </div>
+              <div class="delete-message text-center fw-bold"
+                *ngIf="selectedId === risultato.id && risultato.score >= 75">
+                <p class="fw-bold">Deleting your good score? Why?!</p>
+              </div>
             </div>
           </div>
         </div>
