--- a/CapAngular/src/app/componenti/profile/profile.component.html
+++ b/CapAngular/src/app/componenti/profile/profile.component.html
@@ -1,5 +1,20 @@
 <div class="father py-2">
   <div class="p-5" style="margin-top: 56.8px;">
+    <div class="bubble bubble7"></div>
+    <div class="bubble bubble1"></div>
+    <div class="bubble bubble2"></div>
+    <div class="bubble bubble3"></div>
+    <div class="bubble bubble4"></div>
+    <div class="bubble bubble5"></div>
+    <div class="bubble bubble6"></div>
+    <div class="bubble bubble8"></div>
+    <div class="bubble bubble9"></div>
+    <div class="bubble bubble10"></div>
+    <div class="bubble bubble11"></div>
+    <div class="bubble bubble12"></div>
+    <div class="bubble bubble13"></div>
+    <div class="bubble bubble14"></div>
+    <div class="bubble bubble15"></div>
     <div *ngIf="user" class="text-center">
       <p class="fs-1 mb-5 text-dark">Welcome <span class="text-danger fw-bold">{{ user.username }}</span></p>
       <div class="mb-3">
