--- a/CapAngular/src/styles.scss
+++ b/CapAngular/src/styles.scss
@@ -3,3 +3,143 @@ body{
   background-color: #212529;
   margin: 0
 }
+
+.bubble {
+  background: radial-gradient(circle, #3498db, #add8e6, #fff, transparent);
+  border-radius: 50%;
+  position: absolute;
+  animation: float 5s infinite ease-in-out;
+  opacity: 0;
+}
+
+.bubble1 {
+  width: 20px;
+  height: 20px;
+  left: 20%;
+  animation-duration: 4s;
+}
+
+.bubble14 {
+width: 25px;
+height: 25px;
+left: 22%;
+animation-duration: 7s;
+animation-delay: 3s;
+}
+
+.bubble2 {
+  width: 20px;
+  height: 20px;
+  left: 40%;
+  animation-duration: 7s;
+}
+
+.bubble15 {
+width: 15px;
+height: 15px;
+left: 40%;
+animation-duration: 7s;
+animation-delay: 3s;
+}
+
+.bubble3 {
+  width: 15px;
+  height: 15px;
+  left: 60%;
+  animation-duration: 6s;
+}
+
+.bubble4 {
+  width: 25px;
+  height: 25px;
+  left: 80%;
+  animation-duration: 8s;
+  animation-delay: 2s;
+}
+
+.bubble5 {
+width: 30px;
+height: 30px;
+left: 85%;
+animation-duration: 10s;
+animation-delay: 2s;
+}
+
+.bubble6 {
+width: 28px;
+height: 28px;
+left: 65%;
+animation-duration: 10s;
+}
+
+.bubble7 {
+width: 32px;
+height: 32px;
+left: 48%;
+animation-duration: 6s;
+animation-delay: 3s;
+}
+
+.bubble8 {
+width: 35px;
+height: 35px;
+left: 95%;
+animation-duration: 9s;
+}
+
+.bubble9 {
+width: 22px;
+height: 22px;
+left: 35%;
+animation-duration: 7s;
+animation-delay: 2s;
+}
+
+.bubble13 {
+width: 22px;
+height: 22px;
+left: 35%;
+animation-duration: 7s;
+animation-delay: 5s;
+}
+
+.bubble10 {
+width: 27px;
+height: 27px;
+left: 25%;
+animation-duration: 6s;
+}
+
+.bubble11 {
+width: 12px;
+height: 12px;
+left: 3%;
+animation-duration: 6s;
+animation-delay: 3s;
+}
+
+.bubble12 {
+width: 20px;
+height: 20px;
+left: 10%;
+animation-duration: 8s;
+animation-delay: 5s;
+}
+@keyframes float {
+  0% {
+      transform: translateY(80vh);
+      opacity: 0;
+  }
+
+  25%{
+    opacity: 0.5;
+  }
+
+  50%{
+    opacity: 0.5;
+  }
+  100% {
+      transform: translateY(-70px);
+      opacity: 0;
+  }
+}
