--- a/CapAngular/src/app/componenti/dettagliutente/dettagliutente.component.html
+++ b/CapAngular/src/app/componenti/dettagliutente/dettagliutente.component.html
@@ -1,15 +1,15 @@
 <div class="m-auto w-100">
-  <div class="card text-center m-auto pt-3 position-relative z-3">
+  <div class="card text-center m-auto pt-3 position-relative z-3" *ngIf="user">
     <p class="fs-3 text-dark mb-5">Informazione utente</p>
     <div class="d-flex flex-column flex-md-row align-items-center  justify-content-around">
-      <div class="decoration p-3 d-flex flex-column align-items-center justify-content-center mb-4" *ngIf="user">
+      <div class="decoration p-3 d-flex flex-column align-items-center justify-content-center mb-4">
         <p class="text-dark fs-4">Username: {{user.username}}</p>
         <p class="text-dark fs-4">Email: {{user.email}}</p>
       </div>
       <div class=" position-relative image-container1 d-block d-lg-inline-block">
-       <!-- <div class="image-container scelta" [ngStyle]="{backgroundImage: 'url(' + user.fotoAvatar + ')'}">
+        <div class="image-container scelta" [ngStyle]="{backgroundImage: 'url(' + convertFormat() + user.fotoAvatar + ')'}">
           <i class="bi bi-person-circle text-danger" *ngIf="!user.fotoAvatar"></i>
-        </div>-->
+        </div>
         <div class="dropdown position-absolute matita">
           <button class="btn btn-primary rounded-circle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-pencil-fill p-0"></i>
@@ -17,16 +17,16 @@
           <ul class="dropdown-menu">
             <li><button class="dropdown-item text-center" type="button"><img
                   src="../../../assets/img/kisspng-common-bottlenose-dolphin-shark-dinosaur-planet-im-civil-rights-timeline-timetoast-timelines-5bada7392da3d7.794675181538107193187.png"
-                  class="rounded-circle w-50" alt="profile img" (click)="onFileChange1('uno')"></button></li>
+                  class="rounded-circle w-50" alt="profile img" (click)="salvaImg('uno')"></button></li>
             <li><button class="dropdown-item text-center" type="button"><img
                   src="../../../assets/img/kisspng-shark-5d3b4a0ae0f378.6868345015641666669214.png"
-                  class="rounded-circle w-50" alt="profile img" (click)="onFileChange1('due')"></button></li>
+                  class="rounded-circle w-50" alt="profile img" (click)="salvaImg('due')"></button></li>
             <li><button class="dropdown-item text-center" type="button"><img
                   src="../../../assets/img/kisspng-tiger-shark-transparency-clip-art-cuteness-linda-cola-de-tiburn-cola-plana-descargar-png-5cff48f9c38b52.160053931560234233801.png"
-                  class="rounded-circle w-50" alt="profile img" (click)="onFileChange1('tre')"></button></li>
+                  class="rounded-circle w-50" alt="profile img" (click)="salvaImg('tre')"></button></li>
             <li><button class="dropdown-item text-center" type="button"><img
                   src="../../../assets/img/transparent-shark-5e8fd1571fd850.8525057415864835431304.png"
-                  class="rounded-circle w-50" alt="profile img" (click)="onFileChange1('quattro')"></button></li>
+                  class="rounded-circle w-50" alt="profile img" (click)="salvaImg('quattro')"></button></li>
           </ul>
         </div>
       </div>
